# zero2llmv

./: .gitignore  JSONL_TRAINING_GUIDE.md  LICENSE  README.md  check_env.sh  create_test_data.py  debug_training.sh  demo_tokenizer.py  prepare_tokenizer_data.py  pyproject.toml  pytest.ini  quick_setup.sh  run_quick_test.py  setup.sh  train.py  train_tokenizer.py  trainer_jsonl.py  validate_config_system.py
.claude/specs/yaml-config-training-system/: requirements-confirm.md  technical-spec.md
configs/: debug_training.yaml  llmconfig.py  test_experiment.yaml  vlm_training.yaml  vlm_training_rtx4090.yaml
docs/: llm_architecture_analysis.md  minimind_vlm_architecture.md  multimodal_tensor_flow.md  tensor_flow_diagram.md  usage_guide.md  vlm_architecture.md  vlm_tensor_flow.md  vlm_usage_guide.md
models/: llm.py  vision_encoder.py
src/: __init__.py  train_vlm.py
src/configs/: README.md  __init__.py  config.yaml  config_loader.py  training_models.py
src/configs/experiments/: high_lr_experiment.yaml  large_batch.yaml  llm_only.yaml  long_context.yaml
src/dataset/: __init__.py  vlm_dataset.py
src/models/: __init__.py  llm.py  vision_encoder.py
test_data/: test_data.jsonl
tests/: README.md  __init__.py  conftest.py  run_tests.py  utils.py
tests/fixtures/: __init__.py  fixtures.py
tests/integration/: test_model_integration.py
tests/performance/: __init__.py  test_performance.py
tests/unit/: test_attention.py  test_components.py  test_config.py  test_feedforward.py  test_model.py  test_moe.py
